--- a/mola-be/.env
+++ b/mola-be/.env
@@ -1,5 +1,5 @@
-DB_HOST=192.168.0.90 
-DB_NAME =mola
-DB_USER =mca 
-DB_PASS=mca
-SECRET_KEY=secretmola
+DB_HOST = 127.0.0.1
+DB_NAME = mola
+DB_USER = root
+DB_PASS = admin
+SECRET_KEY = secretmola
