--- a/mola-fe/package.json
+++ b/mola-fe/package.json
@@ -6,7 +6,8 @@
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
     "@hookform/resolvers": "^2.8.8",
-    "@mui/icons-material": "^5.5.0",
+    "@material-ui/icons": "^4.11.3",
+    "@mui/icons-material": "^5.10.3",
     "@mui/material": "^5.5.0",
     "@mui/styles": "^5.5.0",
     "@testing-library/jest-dom": "^5.16.2",
