--- a/mola-fe/package.json
+++ b/mola-fe/package.json
@@ -15,14 +15,19 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
+    "crypto-js": "^4.1.1",
+    "dotenv": "^10.0.0",
+    "md5": "^2.3.0",
     "moment": "^2.29.4",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.0",
     "react-dom": "^17.0.2",
+    "react-dotenv": "^0.1.3",
     "react-hook-form": "^7.29.0",
     "react-number-format": "^4.9.1",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "serve": "^14.0.1",
     "sweetalert": "^2.1.2",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
