--- a/mola-be/.env
+++ b/mola-be/.env
@@ -1,6 +1,6 @@
-DB_HOST = 192.168.0.199
+DB_HOST = 127.0.0.1
 DB_NAME = mola
-DB_USER = mca
-DB_PASS = mca
+DB_USER = root
+DB_PASS = admin
 SECRET_KEY = secretmola
 ACCESS_KEY = @olivia
